--- a/PunishLib/PunishLib.csproj
+++ b/PunishLib/PunishLib.csproj
@@ -2,18 +2,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Authors>Puni.sh</Authors>
-		<Version>1.0.0.4</Version>
+		<Version>1.0.1.1</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFramework>net6.0-windows</TargetFramework>
+		<TargetFramework>net7.0-windows</TargetFramework>
 		<Platforms>x64</Platforms>
 		<LangVersion>latest</LangVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<ProduceReferenceAssembly>false</ProduceReferenceAssembly>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<OutputPath>bin\$(Configuration)\</OutputPath>
-		<NoWarn>CS1591;CA1401</NoWarn>
+		<NoWarn>CS0162;CS1591;CA1401</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup>
