--- a/PunishLib/PunishLib.csproj
+++ b/PunishLib/PunishLib.csproj
@@ -40,14 +40,20 @@
             <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
             <Private>False</Private>
         </Reference>
-        <Reference Include="ImGui.NET">
-            <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
-        <Reference Include="ImGuiScene">
-            <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
+<Reference Remove="ImGui.NET" />
+<Reference Remove="ImGuiScene" />
+<Reference Include="Dalamud.Bindings.ImGui">
+    <HintPath>$(DalamudLibPath)Dalamud.Bindings.ImGui.dll</HintPath>
+    <Private>False</Private>
+</Reference>
+<Reference Include="Dalamud.Bindings.ImPlot">
+    <HintPath>$(DalamudLibPath)Dalamud.Bindings.ImPlot.dll</HintPath>
+    <Private>False</Private>
+</Reference>
+<Reference Include="Dalamud.Bindings.ImGuizmo">
+    <HintPath>$(DalamudLibPath)Dalamud.Bindings.ImGuizmo.dll</HintPath>
+    <Private>False</Private>
+</Reference>
         <Reference Include="Lumina">
             <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
             <Private>False</Private>
