fix(ecommons): migrate to package reference for api13

--- a/PunishLib/PunishLib.csproj
+++ b/PunishLib/PunishLib.csproj
@@ -28,7 +28,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\ECommons\ECommons\ECommons.csproj" />
+        <PackageReference Include="ECommons" Version="3.0.0.18-api13" />
     </ItemGroup>
 
     <ItemGroup>
